syntax = "proto3";
package pb;
option go_package = "address_book/internal/pb";

import "google/api/annotations.proto";

service AddressBookService {
  rpc AddContact(AddContactRequest) returns (AddContactResponse) {
    option (google.api.http) = {
      post: "/addContact"
      body: "*"
    };
  }
  rpc FindContact(FindContactRequest) returns (FindContactResponse) {
    option (google.api.http) = {
      post: "/findContact"
      body: "*"
    };
  }
  rpc DeleteContact(DeleteContactRequest) returns (DeleteContactResponse) {
    option (google.api.http) = {
      post: "/deleteContact"
      body: "*"
    };
  }
  rpc UpdateContact(UpdateContactRequest) returns (UpdateContactResponse){
    option (google.api.http) = {
      post: "/updateContact"
      body: "*"
    };
  }
}

message Contact {
  string name = 1;
  string phone = 2;
  string address = 3;
}

message AddContactRequest {
  Contact contact = 1;
}

message FindContactRequest{
  string query = 1;
  SearchType searchType = 2;

  enum SearchType {
    NAME = 0;
    PHONE = 1;
  }
}

message DeleteContactRequest {
  string phone = 1;
}

message UpdateContactRequest {
  Contact contact = 1;
}

message AddContactResponse {
  string msg = 1;
}

message FindContactResponse {
  repeated Contact contacts = 1;
  string msg = 2;
}

message DeleteContactResponse {
  string msg = 1;
}

message UpdateContactResponse {
  string msg = 1;
}